feat: optimized route and docs according to database query function
